Fix title alignment

--- a/client/src/css/mainContent.css
+++ b/client/src/css/mainContent.css
@@ -53,6 +53,7 @@ body
     border-radius: 5px;
     transition: .2s;
     text-decoration: none;
+    text-align: center;
 }
 
 .training:hover
