--- a/client/src/css/training.css
+++ b/client/src/css/training.css
@@ -9,6 +9,7 @@
 {
     font-size: 40px;
     margin: 30px 0 0 0;
+    text-align: center;
 }
 
 .buttons
